--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5434;Username=postgres;Password=postgres;Database=postgres;SslMode=disable;"
+  }
 }
