--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5434;Username=postgres;Password=postgres;Database=postgres;SslMode=disable;"
+    "DefaultConnection": "Host=postgres;Port=5432;Username=postgres;Password=postgres;Database=postgres;SslMode=disable;"
   }
 }
