--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,5 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 # End of https://www.toptal.com/developers/gitignore/api/aspnetcore,rider
+
+.database
