--- a/Application/Application.Contracts/Application.Contracts.csproj
+++ b/Application/Application.Contracts/Application.Contracts.csproj
@@ -16,4 +16,9 @@
       <ProjectReference Include="..\..\Application.Dto\Application.Dto.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="12.2.0" />
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+    </ItemGroup>
+
 </Project>
