--- a/Application.Abstractions/Application.Abstractions.csproj
+++ b/Application.Abstractions/Application.Abstractions.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.17" />
     </ItemGroup>
 
