--- a/Application/Application/Application.csproj
+++ b/Application/Application/Application.csproj
@@ -13,7 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Application.Abstractions\Application.Abstractions.csproj" />
+      <ProjectReference Include="..\Application.Abstractions\Application.Abstractions.csproj" />
       <ProjectReference Include="..\Application.Contracts\Application.Contracts.csproj" />
     </ItemGroup>
 
